# moon-lol

./: .cursorrules  .gitignore  Cargo.toml  README.md  league.rs  league_ui.rs  package.json
.agent/rules/: bevy-guide.md  code-style-guide.md  docs-guide.md  verify-guide.md
.claude/: settings.local.json
apps/web/: package.json  pnpm-lock.yaml  style.md  vite.config.ts
assets/: attack.ron  spotlighthealthbaratlas.tex
assets/games/: attack.ron  classic_fiora.ron  hwei.ron
assets/shaders/: custom_material.wgsl  mesh.frag  mesh.vert  quad.vert  unlit_decal.frag  unlit_decal.vert
crates/league_core/: Cargo.toml
crates/league_file/: Cargo.toml
crates/league_loader/: Cargo.toml
crates/league_loader/src/: game.rs  lib.rs  map.rs  prop_bin.rs  reader.rs  wad.rs  wad_parse.rs
crates/league_property/: Cargo.toml
crates/league_to_lol/: Cargo.toml
crates/league_utils/: Cargo.toml
crates/lol_config/: Cargo.toml
crates/lol_core/: Cargo.toml
crates/lol_loader/: Cargo.toml
crates/shader_validate/: Cargo.toml
docs/: animation.md  animation_timing.md  asset.md  chat.md  introduction.md  nom8.md  particle_system.md  project.md  prompt.md  shader.md  skill.md  state.md  todo.md
examples/: aimesh.rs  animation_timing.rs  attack.rs  bench_no_render.rs  classic_fiora.rs  ecs.rs  extract.rs  extract_all_class.rs  extract_prop_bins.rs  extract_shader.rs  league_animation.rs  nav_grid.rs  navigation_grid.rs  particle.rs  path_find.rs  reflect.rs  research_nav.rs  riven.rs  rl_env.rs  ser_bin.rs  shader_convert.rs  shader_def.rs  stream.rs  texture.rs
src/: abilities.rs  config.rs  core.rs  entities.rs  lib.rs  logging.rs  main.rs  map.rs  ui.rs
src/abilities/: duelists_dance.rs  fiora_e.rs  fiora_passive.rs  fiora_r.rs  lunge.rs
src/buffs/: damage_reduction.rs  fiora_passive.rs  fiora_r.rs  riven_passive.rs  riven_q.rs  shield_magic.rs  shield_white.rs
src/combat/: attack.rs  damage.rs  life.rs  mod.rs  movement.rs  navigation.rs
src/core/: action.rs  aggro.rs  animation.rs  attack.rs  attack_auto.rs  base.rs  behavior.rs  camera.rs  character.rs  command.rs  config.rs  controller.rs  cooldown.rs  damage.rs  effect.rs  game.rs  life.rs  lifetime.rs  map.rs  missile.rs  mod.rs  movement.rs  navigation.rs  particle.rs  resource.rs  rotate.rs  run.rs  skill.rs  skin.rs  spawn.rs  ui.rs  utils.rs  view_visibility.rs
src/entities/: barrack.rs  champion.rs  champions.rs  inhibitor.rs  minion.rs  mod.rs  nexus.rs  shpere.rs  turret.rs
src/league/: barrack.rs  character.rs  grid.rs  lane.rs  loader.rs  material.rs  minion.rs  mod.rs  team.rs  utils.rs
src/particles/: mod.rs
src/render/: camera.rs  map.rs  mod.rs  (+1 more)
tests/: attack.rs  minion.rs
(+173 files in other folders)
