[workspace]
members = [
    "crates/*",
]
resolver = "2"

[package]
name = "moon_lol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
lol_core.workspace = true
serde.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"
bitflags = "2.9.1"
thiserror = "2.0.12"
image = "0.25.6"
zstd = "0.13.3"
twox-hash = "2.1.1"
ddsfile = "0.5.2"
bevy_egui = "0.35.1"
half = "2.6.0"
binrw = "0.15.0"
rand = "0.9.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bincode = "1.3"
heck = "0.5.0"


[workspace.dependencies]
lol_core = { path = "crates/lol_core" }

bevy = { version = "0.16.0", features = ["dds", "bevy_picking", "serialize"] }
serde = "1.0.219"