[workspace]
members = [
    "crates/*",
]
resolver = "2"

[package]
name = "moon_lol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bincode.workspace = true
binrw.workspace = true
bitflags.workspace = true
heck.workspace = true
league_core.workspace = true
league_loader.workspace = true
league_property.workspace = true
league_to_lol.workspace = true
league_utils.workspace = true
lol_config.workspace = true
lol_core.workspace = true
lol_loader.workspace = true
nom.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25.6"
twox-hash = "2.1.1"
ddsfile = "0.5.2"
bevy_egui = "0.35.1"
half = "2.6.0"
rand = "0.9.2"
futures = "0.3"

[workspace.dependencies]
league_core = { path = "crates/league_core" }
league_utils = { path = "crates/league_utils" }
league_property = { path = "crates/league_property" }
league_file = { path = "crates/league_file" }
league_to_lol = { path = "crates/league_to_lol" }
league_loader = { path = "crates/league_loader" }
lol_config = { path = "crates/lol_config" }
lol_core = { path = "crates/lol_core" }
lol_loader = { path = "crates/lol_loader" }

bevy = { version = "0.16.0", features = ["dds", "bevy_picking", "serialize"] }
bincode = "1.3"
binrw = "0.15.0"
bitflags = "2.9.1"
heck = "0.5.0"
nom = "7.1.3"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
